Fixed minor layout bugs in mozilla

--- a/app/assets/stylesheets/internal.scss
+++ b/app/assets/stylesheets/internal.scss
@@ -73,9 +73,6 @@ header{
   .col-username{
     text-align: right;
     padding-right: 10px;
-    .username{
-      margin-right: -4px;
-    }
     .logout{
       font-size: 13px;
     }
